@@ -1,41 +1,0 @@
-#define WORDS_BIGENDIAN 1
-
-/* #undef DEBUG */
-/* #undef DEBUG_BUFFER */
-/* #undef DEBUG_CONFIG */
-/* #undef DEBUG_CONTEXT */
-/* #undef DEBUG_CONVERT */
-/* #undef DEBUG_EXT */
-/* #undef DEBUG_LOCK */
-/* #undef DEBUG_LOOP */
-/* #undef DEBUG_MATH */
-/* #undef DEBUG_MAXIMUS */
-/* #undef DEBUG_MEM */
-/* #undef DEBUG_MIXER */
-/* #undef DEBUG_SOURCE */
-/* #undef DEBUG_STREAMING */
-/* #undef DEBUG_STUB */
-/* #undef DEBUG_QUEUE */
-
-#define PIC 1
-
-#define USE_POSIXTHREADING 1
-
-/* #undef USE_DLOPEN */
-#define RDYNAMIC "-rdynamic"
-
-#define WORDS_BIGENDIAN 1
-
-#define USE_BACKEND_NATIVE_DARWIN 1
-#define USE_BACKEND_NULL 1
-#define USE_BACKEND_WAVEOUT 1
-/* #undef USE_BACKEND_ALSA */
-/* #undef USE_BACKEND_ARTS */
-/* #undef USE_BACKEND_ESD */
-/* #undef USE_BACKEND_NATIVE_IRIX */
-/* #undef USE_BACKEND_SDL */
-/* #undef ENABLE_EXTENSION_AL_EXT_MP3 */
-/* #undef ENABLE_EXTENSION_AL_EXT_VORBIS */
-
-/* The number of bytes in a void *.  */
-#define SIZEOF_VOID_P 4
